@@ -1,4 +1,11 @@
-        * 11/07
+        * 11/27
+        ** ifigure.utils.wx3to4 is added. This modules is used to absorb the API differences
+	between Classic and Phoenix. Note that it is not meant for general purpose module.
+	It covers only the APIs used in piScope.
+	** Various adjustment/fix are maded to use wx3to4 in many modules
+	** HGsupport::onHGreload is added to refresh hg folder using the repository data.
+	
+	* 11/07
 	** GLComponent::set_gl_hl_use_array_idx, GLComponent::get_gl_hl_use_array_idx
 	is modified to record the setting in setp. This allows to configure use_array_idx
 	before an artist is made
